--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
   --checkout-bord: rgba(255, 181, 74, 0.35);
   --title-grad-start: #ffb54a;
   --title-grad-end: #ff7b0a;
+  --retrowave-pink: #FF46A2;
   --grid: 10rem;
 }
 
