--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
   --title-grad-start: #ffb54a;
   --title-grad-end: #ff7b0a;
   --retrowave-pink: #FF46A2;
+  --retro-red: #ff3b3b;
   --grid: 10rem;
   --num-promoted-cards: 3;
 }
