--- a/styles.css
+++ b/styles.css
@@ -579,7 +579,7 @@ a span {
     border-radius: 10px;
     padding: 20px 24px;
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto 35%;
     grid-template-areas:
         "img title"
         "img info";
@@ -626,13 +626,33 @@ a span {
     grid-area: title;
     margin: 0 0 4px 0;
     font-family: "Press Start 2P";
-    font-size: 14px;
     line-height: 1.3;
     text-transform: uppercase;
     background: linear-gradient(90deg, var(--title-grad-start), var(--title-grad-end));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: transform 0.3s ease;
+}
+
+@media(min-width: 1145px)
+{
+    .card h2 {
+        font-size: .7vw;
+    }
+}
+
+@media(max-width: 1144px)
+{
+    .card h2 {
+        font-size: 1.4vw;
+    }
+}
+
+@media(max-width: 849px)
+{
+    .card h2 {
+        font-size: 2.1vw;
+    }
 }
 
 .card:hover h2,
